[metadata]
name = types-pika
version = 1.2.0b1
license = MIT
author = Bao Trinh
author_email = qubidt@gmail.com
description = PEP-484 stubs for Pika
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/qubidt/types-pika
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Stubs Only

[options]
packages = pika-stubs
include_package_data = True
install_requires =

[options.extras_require]
dev =
    flake8~=4.0.0
    flake8-pyi
    mypy>=0.920
    pyright
    pika==1.2.0
    tornado
    twisted
